--- a/AsyncFuncCaller.uplugin
+++ b/AsyncFuncCaller.uplugin
@@ -8,8 +8,9 @@
 	"CreatedBy": "",
 	"CreatedByURL": "",
 	"DocsURL": "",
-	"MarketplaceURL": "",
+	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/275ea814e498453b8532dc63a7cec86e",
 	"SupportURL": "",
+	"EngineVersion": "4.23.0",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
 	"Installed": false,
@@ -17,7 +18,10 @@
 		{
 			"Name": "AsyncFuncCaller",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"WhitelistPlatforms": [
+				"Win64"
+			]
 		}
 	]
 }
